--- a/auto/config
+++ b/auto/config
@@ -5,5 +5,9 @@ lb config noauto \
     --architecture amd64 \
     --distribution bookworm \
     --binary-images iso-hybrid \
-    --mirror-bootstrap http://deb.debian.org/debian/ \
+    --mirror-bootstrap "http://deb.debian.org/debian/" \
+    --mirror-chroot "http://deb.debian.org/debian/" \
+    --mirror-binary "http://deb.debian.org/debian/" \
+    --security false \
+    --updates false \
     "${@}"
