--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Build ISO
         run: |
+          sudo lb clean --purge
           sudo lb config --architecture amd64 --distribution bookworm --binary-images iso-hybrid
           sudo lb build
 
