--- a/auto/config
+++ b/auto/config
@@ -8,4 +8,10 @@ lb config noauto \
     --mirror-bootstrap "http://deb.debian.org/debian/" \
     --mirror-chroot "http://deb.debian.org/debian/" \
     --mirror-binary "http://deb.debian.org/debian/" \
+    --parent-mirror-bootstrap "http://deb.debian.org/debian/" \
+    --parent-mirror-chroot "http://deb.debian.org/debian/" \
+    --parent-mirror-binary "http://deb.debian.org/debian/" \
+    --parent-distribution bookworm \
+    --parent-debian-installer-distribution bookworm \
+    --archive-areas "main contrib non-free non-free-firmware" \
     "${@}"
