fix: Disable security and updates mirrors to prevent ubuntu leak

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Build ISO
         run: |
           sudo lb clean --purge
+          rm -rf config/
           sudo lb config
           sudo lb build
 
