fix: Hard-disable security mirrors and purge auto-generated configs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           sudo lb clean --purge
           rm -rf config/
           sudo lb config
+          rm -f config/archives/*.list.chroot
           sudo lb build
 
       - name: Upload ISO Artifact
