--- a/auto/config
+++ b/auto/config
@@ -12,4 +12,7 @@ lb config noauto \
     --parent-mirror-chroot "http://deb.debian.org/debian/" \
     --parent-mirror-binary "http://deb.debian.org/debian/" \
     --archive-areas "main contrib non-free non-free-firmware" \
+    --security false \
+    --updates false \
+    --backports false \
     "${@}"
