--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           sudo lb clean --purge
           rm -rf config/
           sudo lb config
-          rm -f config/archives/*.list.chroot
+          sudo sed -i '/ubuntu/d' config/archives/*.list.chroot || true
           sudo lb build
 
       - name: Upload ISO Artifact
