--- a/auto/config
+++ b/auto/config
@@ -8,5 +8,7 @@ lb config noauto \
     --mirror-bootstrap "http://deb.debian.org/debian/" \
     --mirror-chroot "http://deb.debian.org/debian/" \
     --mirror-binary "http://deb.debian.org/debian/" \
+    --security false \
+    --updates false \
     --archive-areas "main contrib non-free non-free-firmware" \
     "${@}"
