--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           sudo lb clean --purge
           sudo lb config
-          sudo grep -lR "ubuntu" config/archives/ | xargs sudo rm -f || true
+          sudo rm -f config/archives/ubuntu* || true
           sudo lb build
 
       - name: Upload ISO Artifact
