--- a/auto/config
+++ b/auto/config
@@ -8,5 +8,8 @@ lb config noauto \
     --mirror-bootstrap "http://deb.debian.org/debian/" \
     --mirror-chroot "http://deb.debian.org/debian/" \
     --mirror-binary "http://deb.debian.org/debian/" \
+    --parent-mirror-bootstrap "http://deb.debian.org/debian/" \
+    --parent-mirror-chroot "http://deb.debian.org/debian/" \
+    --parent-mirror-binary "http://deb.debian.org/debian/" \
     --archive-areas "main contrib non-free non-free-firmware" \
     "${@}"
