--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
               --mirror-binary "http://deb.debian.org/debian/" \
               --archive-areas "main contrib non-free non-free-firmware"
 
+          sudo find config/archives -name "*.list*" -delete || true
           sudo mkdir -p config/archives
           echo "deb http://deb.debian.org/debian/ bookworm main contrib non-free non-free-firmware" | sudo tee config/archives/debian.list.chroot
+          echo "deb http://deb.debian.org/debian/ bookworm-updates main contrib non-free non-free-firmware" | sudo tee -a config/archives/debian.list.chroot
           sudo lb build
 
       - name: Upload ISO Artifact
