--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,15 +23,14 @@ jobs:
               --mirror-bootstrap "http://deb.debian.org/debian/" \
               --mirror-chroot "http://deb.debian.org/debian/" \
               --mirror-binary "http://deb.debian.org/debian/" \
-              --archive-areas "main contrib non-free non-free-firmware" \
-              --security false \
-              --updates false \
-              --backports false
+              --archive-areas "main contrib non-free non-free-firmware"
 
           sudo rm -rf config/archives/*.list* || true
           sudo mkdir -p config/archives
           echo "deb http://deb.debian.org/debian/ bookworm main contrib non-free non-free-firmware" | sudo tee config/archives/debian.list.chroot
+          echo "deb http://deb.debian.org/debian/ bookworm-updates main contrib non-free non-free-firmware" | sudo tee -a config/archives/debian.list.chroot
           sudo touch config/archives/debian-security.list.chroot
+          sudo touch config/archives/ubuntu.list.chroot
           sudo lb build
 
       - name: Upload ISO Artifact
