--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
     container:
       image: debian:bookworm
       options: --privileged
@@ -25,7 +28,6 @@ jobs:
               --distribution bookworm \
               --binary-images iso-hybrid \
               --archive-areas "main contrib non-free non-free-firmware"
-
           lb build
 
       - name: Create GitHub Release
@@ -33,12 +35,15 @@ jobs:
         if: success()
         with:
           tag_name: SavarezOS-v${{ github.run_number }}
-          name: SavarezOS Alpha Release ${{ github.run_number }}
+          name: SavarezOS Alpha v${{ github.run_number }}
           body: |
-            Automated Build for SavarezOS.
-            Nama Distro: SavarezOS
-            Identitas OS: SavarezOS GNU/Linux
-            Hostname: SavarezOS
+            Successfully created from commit: `${{ github.sha }}`
+            
+            **System Information:**
+            - **Distro Name:** SavarezOS
+            - **Base:** Debian Bookworm
+            - **Desktop:** KDE Plasma
+            - **Hostname:** SavarezOS
           files: "*.iso"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
