fix: restore isolinux menu, disable user password lock, and repair sddm theme

--- a/config/includes.binary/isolinux/isolinux.cfg
+++ b/config/includes.binary/isolinux/isolinux.cfg
@@ -1,5 +1,6 @@
-default install
-label install
+default live
+label live
     menu label ^Live SavarezOS (amd64)
     kernel /live/vmlinuz
     append initrd=/live/initrd.img boot=live components quiet splash
+
