feat: finalize SavarezOS live hook and post-install branding

--- a/config/includes.chroot/etc/calamares/settings.conf
+++ b/config/includes.chroot/etc/calamares/settings.conf
@@ -16,9 +16,10 @@ sequence:
     - summary
 - exec:
     - partition
-    - mount
     - unpackfs
     - machineid
+    - mount
+    - savarezos-branding
     - fstab
     - locale
     - keyboard
